--- a/JIRAConnect/JCOClasses/JMCViewController.xib
+++ b/JIRAConnect/JCOClasses/JMCViewController.xib
@@ -323,7 +323,7 @@
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>JCOViewController</string>
+					<string>JMCViewController</string>
 					<string>UIResponder</string>
 					<string>{{42, 469}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
